# your-app-idea

./: .gitignore  .lovableignore  AGENTS.md  ANALISE-ARQUIVOS-LEGADOS.md  ANALISE_SENIOR_PLANO_ALTERNATIVO.md  CHANGELOG.md  CLAUDE.md  COOKBOOK.md  GUIA-ANALISE-ARQUIVOS.md  INDICE_ARQUIVOS_CRIADOS.md  INTEGRACAO_BEAT_TO_X_MAPPING.md  Makefile  QA-AGENT-PROMPT.md  README.md  README_ANALISE_COMPLETA.md  RESUMO_EXECUTIVO_CTO.md  RESUMO_FINAL_ANALISE.md  ROADMAP-PROXIMOS-PASSOS.md  ROADMAP.md  RUNBOOK.md  analise_v2_dynamic_layout.md  analyze-unused-files.py  analyze-unused-frontend.js  arquitetura.md  bugfix-2026-01-23.md  check-unused.sh  cleanup-legacy.sh  docker-compose.yml  index.html  json  main.py  metadata.json  package-lock.json  package.json  pr010.diff  pyproject.toml  requirements.txt  run_legacy_temp.py  tsconfig.json  tsconfig.node.json  (+1 more)
.agents/00-orchestration/: context-manager.md  orchestrator.md  repo-guardian.md
.agents/01-viewer-engine/: lesson-engine-specialist.md  midi-specialist.md  viewer-engineer.md
.agents/02-catalog-curriculum/: catalog-engineer.md  curriculum-analyst.md
.agents/03-quality-assurance/: bug-investigator.md  code-reviewer.md  qa-auditor.md  regression-auditor.md  tdd-engineer.md  test-engineer.md
.agents/04-architecture-security/: architecture-reviewer.md  security-reviewer.md
.agents/05-docs-product/: docs-writer.md  product-analyst.md
.agents/06-platform-data/: analytics-engineer.md  database-engineer.md  platform-engineer.md
.agents/shared/: conventions.md
.github/workflows/: test-backend.yml
.lovable/: plan.md
assets/: app_config.json  lessons.json  visual_config.json
docs/: midi-onboarding-rollout.md
public/: config.json
src/: App.tsx  main.tsx  styles.css
src/config/: app-config.ts
src/contexts/: AuthContext.tsx  PracticeContext.tsx  UserContext.tsx
src/hooks/: useAnalytics.ts  useAuth.ts  useLessons.ts  usePracticeState.ts
src/mocks/: analytics.mock.ts  lessons.mock.ts  practice.mock.ts  user.mock.ts
src/pages/: AnalyticsPage.tsx  DashboardPage.tsx  (+7 more)
supabase/: config.toml
tmp/: published-home.html  published-index.js
viewer/: README.md  auth-client.ts  auth-gate.ts  catalog-service.ts  dashboard.ts  env.example  home.ts  hud-timer.test.ts  index.html  index.tsx  key-layout.ts  lesson-engine.test.ts  lesson-engine.ts  lesson-orchestrator.ts  lesson-pipeline.test.ts  lesson-pipeline.ts  lesson-session-controller.test.ts  lesson-timer.test.ts  lesson-timer.ts  local-transport-driver.test.ts  local-transport-driver.ts  measure-density.test.ts  metadata.json  package-lock.json  package.json  piano-roll-controller.ts  pianopro-home.tsx  sheet-layout.ts  styles.css  test.tsx  transport-client.test.ts  transport-client.ts  transport-metronome.ts  types.ts  validators.test.ts  vite.config.ts
(+163 files in other folders)
