[project]
name = "piano-trainer-core"
version = "0.2.0"
description = "Core engine for piano training application - treino de leitura/coordenação/timing"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Piano Trainer Team"}
]
license = {text = "MIT"}
keywords = ["piano", "music", "training", "midi", "education", "edtech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

dependencies = [
    "mido",
    "python-rtmidi",
    "pygame",
    "music21",
    "Pillow",
    "aiohttp",
    "websocket-client",
    "python-dotenv>=1.0.0",
    "psycopg-binary>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-Pillow",
    "types-aiofiles",
]

backend = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "supabase>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
]

[project.urls]
Homepage = "https://github.com/jonathasstz-creator/piano-trainer"
Documentation = "https://github.com/jonathasstz-creator/piano-trainer#readme"
Repository = "https://github.com/jonathasstz-creator/piano-trainer"
Issues = "https://github.com/jonathasstz-creator/piano-trainer/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "pygame.*",
    "mido.*",
    "music21.*",
]
ignore_missing_imports = true
